--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,11 @@
         "psr-4": {
             "JustCommunication\\JcFIASSDK\\": "src/"
         }
+    },
+    "config": {
+        "platform": {
+            "php": "5.6"
+        },
+        "sort-packages": true
     }
 }
